@@ -3,6 +3,10 @@
     - Fix open() followed by stringify() resulting in a corrupt (mostly-empty)
       PDF, which was broken by changes in 2.039 (reported by Gareth Tunley).
 
+    - [RT #134993] Calling open($filename) followed by saveas($same_filename)
+      instead of update() resulted in a corrupt PDF in 2.039, which no longer
+      reads the entire file into memory on open (reported by Marco Pessotto).
+
     - [RT #134957] Fix encoding of \n in a PDF string containing non-printable
       characters (reported by Stuart Henderson).
 
